namespace Problem2.Domain.Models;

public record PrintJob(string JobId);
